--- a/FrontEnd/src/app/elements/navbar/navbar.component.html
+++ b/FrontEnd/src/app/elements/navbar/navbar.component.html
@@ -12,6 +12,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="leaderboard">Leaderboard</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="course">TESTCourse</a>
+      </li>
 
     </ul>
     <ul class="navbar-nav mr-right">
@@ -20,7 +23,7 @@
           Profile
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">My Profile</a>
+          <a class="dropdown-item" routerLink="article">My Profile</a>
           <a class="dropdown-item" href="#">Add Article</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Logout</a>
