--- a/FrontEnd/src/app/pages/home/home.component.html
+++ b/FrontEnd/src/app/pages/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="big">
-  <div class="test" *ngFor="let course of courses">
+  <div class="test" *ngFor="let course of courses" routerLink="course">
     <h2>{{course.title}}</h2>  <br>
     <p>{{course.description}}</p>
     <img src={{course.img}} alt="poza">
   </div>
 </div>
+
