--- a/FrontEnd/src/app/pages/course/course.component.html
+++ b/FrontEnd/src/app/pages/course/course.component.html
@@ -3,26 +3,8 @@
     <button id={{chapter.id}} (click)="onclick(this.chapter.id)" class="btn btn-light"  *ngFor="let chapter of chapters">{{chapter.title}}</button>
   </div>
   <div class="chapter">
-    <li *ngFor="let chapter of chapters">
-      {{chapter.content}}
-    </li>
+    {{selectedChapter}}
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <br>
     <br>
     <br>
