--- a/FrontEnd/src/app/elements/navbar/navbar.component.html
+++ b/FrontEnd/src/app/elements/navbar/navbar.component.html
@@ -185,6 +185,7 @@ body {
 </style>
 </head> 
 <body>
+	
 <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
 	<a href="#" class="navbar-brand"><i class="fa fa-university"></i>Learning<b>IT</b></a>  		
 	<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -200,9 +201,9 @@ body {
 		</form>
 		<div class="navbar-nav ml-auto">
 			<a href="#" class="nav-item nav-link active"><i class="fa fa-home"></i><span>Home</span></a>
-			<a href="#" class="nav-item nav-link"><i class="fa fa-paperclip"></i><span>Articles</span></a>
-			<a href="#" class="nav-item nav-link"><i class="fa fa-users"></i><span>Leaderboard</span></a>
-			<a href="#" class="nav-item nav-link"><i class="fa fa-globe"></i><span>Team</span></a>
+			<a href="#" class="nav-item nav-link active" routerLink="article"><i class="fa fa-paperclip"></i><span>Articles</span></a>
+			<a href="#" class="nav-item nav-link active" routerLink="leaderboard"><i class="fa fa-users"></i><span>Leaderboard</span></a>
+			<a href="#" class="nav-item nav-link active" routerLink="team"><i class="fa fa-globe"></i><span>Team</span></a>
 			<div class="nav-item dropdown">
 				<a href="#" data-toggle="dropdown" class="nav-item nav-link dropdown-toggle user-action"><img src="https://scontent.ftsr1-2.fna.fbcdn.net/v/t1.0-9/128851637_3453122531445951_1776703573863513208_o.jpg?_nc_cat=110&ccb=2&_nc_sid=8bfeb9&_nc_ohc=Q54Qj4vjp1QAX9y8zf4&_nc_ht=scontent.ftsr1-2.fna&oh=924e02aa9c25960c02a9d3a975be0343&oe=5FF0DC63" class="avatar" alt="Avatar"> AdrianaCostache <b class="caret"></b></a>
 				<div class="dropdown-menu">
