--- a/FrontEnd/src/app/pages/home/home.component.scss
+++ b/FrontEnd/src/app/pages/home/home.component.scss
@@ -1,24 +1,43 @@
-.big{
-  margin-left: 40%;
-  width:60%;
+.right{
+  position: fixed;
+  color: white;
+  background-color:#666666;
+  border-radius: 15px;
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  margin-left: 40px;
+  width: 15%;
+  height: 300px;
+  float: left;
 }
 
-
-.test {
+.left{
+  background-color: yellow;
+  margin-left: 20%;
+  width:80%;
+}
+.list-courses {
   float: left;
-  background-image: url("../../../img/course.png");
-  width: 20%;
-  height: 10%;
+  background-color: #666666;
+  width: 300px;
+  height: 250px;
   color: white;
   border-radius: 15px;
-  margin-top: 30px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  margin-left: 30px;
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  margin-left: 20px;
 }
 h2{
-  padding: 2% 2%;
+  text-align: center;
+  padding: 4%;
 }
 p{
-  padding: 5% 5%;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+.center {
+  display: block;
+  float: right;
 }
