--- a/FrontEnd/src/app/pages/home/home.component.scss
+++ b/FrontEnd/src/app/pages/home/home.component.scss
@@ -1,7 +1,7 @@
-.right{
+.left{
   position: fixed;
-  color: white;
-  background-color:#666666;
+  color: black;
+  background-color:white;
   border-radius: 15px;
   margin-top: 20px;
   margin-right: 20px;
@@ -12,17 +12,16 @@
   float: left;
 }
 
-.left{
-  background-color: yellow;
+.right{
   margin-left: 20%;
   width:80%;
 }
 .list-courses {
   float: left;
-  background-color: #666666;
+  background-color: white;
   width: 300px;
   height: 250px;
-  color: white;
+  color: black;
   border-radius: 15px;
   margin-top: 20px;
   margin-right: 20px;
@@ -31,7 +30,7 @@
 }
 h2{
   text-align: center;
-  padding: 4%;
+  padding: 2%;
 }
 p{
   padding-left: 5%;
@@ -40,4 +39,12 @@ p{
 .center {
   display: block;
   float: right;
+}
+.filtre{
+  margin-top:3%;
+  margin-left: 10%;
+
+}
+hr.solid {
+  border-top: 1px solid #666666;
 }
