--- a/FrontEnd/src/app/pages/login/login.component.html
+++ b/FrontEnd/src/app/pages/login/login.component.html
@@ -1,3 +1,7 @@
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
+
 <div class="basic">
 	<div class="col-md-6 offset-md-3 mt-4">
 		<h3>Login</h3>
