--- a/FrontEnd/src/app/elements/navbar/navbar.component.html
+++ b/FrontEnd/src/app/elements/navbar/navbar.component.html
@@ -33,7 +33,7 @@
 	<div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
 		<div class="navbar-nav ml-auto">
 			<a routerLink="/home" class="nav-item nav-link active"><i class="fa fa-home"></i><span>Home</span></a>
-			<a routerLink="/article" class="nav-item nav-link active" ><i class="fa fa-paperclip"></i><span>Articles</span></a>
+			<a routerLink="/articles" class="nav-item nav-link active" ><i class="fa fa-paperclip"></i><span>Articles</span></a>
 			<a routerLink="/leaderboard" class="nav-item nav-link active" ><i class="fa fa-users"></i><span>Leaderboard</span></a>
 			<a routerLink="/team" class="nav-item nav-link active" ><i class="fa fa-globe"></i><span>Team</span></a>
 			<div class="nav-item dropdown">
