--- a/FrontEnd/src/app/pages/course/course.component.html
+++ b/FrontEnd/src/app/pages/course/course.component.html
@@ -6,9 +6,7 @@
   </div>
   <div class="chapter">
     <div class="classpre">
-      <pre>
-        {{selectedChapter}}
-      </pre>
+      <div [innerHTML]="selectedChapter"></div>
     </div>
     <br>
     <button class="btn btn-light" routerLink="/exam">Examen</button>
