--- a/FrontEnd/src/app/pages/article/article.component.html
+++ b/FrontEnd/src/app/pages/article/article.component.html
@@ -1,88 +1,14 @@
-<html>
-<head>
-    <title> Chaotix Studios </title>
-    <style>
-        * {
-            background-color:#E6E6E6;
-            font-family:Lato,Tahoma,Arial,Sans-Serif;
-        }
-        #wrapper {
-            margin: 0 auto;
-            width:  500px;
-        }
-
-        #coolMenu a:link{
-            color:#FFFFFF;
-        }
-        #top{
-            text-align:center;
-            padding-top:100px;
-        }
-        #coolMenu,
-        #coolMenu ul {
-            list-style: none;
-        }
-        #coolMenu {
-            float: left;
-            position:absolute;
-        }
-        #coolMenu > li {
-            float: left;
-        }
-        #coolMenu li a {
-        display: block;
-        height: 2em;
-        line-height: 2em;
-        padding: 0 1.5em;
-        text-decoration: none;
-        background-color:#000000;
-        }
-        #coolMenu ul {
-            position: absolute;
-            display: none;
-        z-index: 999;
-
-        }
-        #coolMenu ul li a {
-            width: 80px;
-        }
-        #coolMenu li:hover ul {
-            display: block;
-        }
-        #body-main{
-            text-align:center;
-        }
-    </style>
-</head>
-<body>
-    <div id="wrapper">
-        <div id="top">
-            <div id="top-wrapper">
-                <div id="logo">
-                    <img src="http://i.imgur.com/4ReSeS7.png"><br>
-                    <h3>Chaos Awaits.</h3><br>
-                </div>
-            </div>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <div class="articol" *ngFor="let item of test">
+        <div>
+          <img class="picture" src="{{item.imageURL}}" alt="poza">
         </div>
-        <div id="body">
-            <div id="body-wrapper">
-                <div id="body-main">
-                    <ul id="coolMenu">
-                        <li><a href="#">Lorem</a></li>
-                        <li><a href="#">Mauricii</a></li>
-                        <li>
-                            <a href="#">Periher</a>
-                            <ul>
-                                <li><a href="#">Hellenico</a></li>
-                                <li><a href="#">Genere</a></li>
-                                <li><a href="#">Indulgentia</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Tyrio</a></li>
-                        <li><a href="#">Quicumque</a></li>
-                    </ul>
-                </div>
-            </div>
+        <div class="content">
+          {{item.Content}}
         </div>
+      </div>
     </div>
-</body>
+  </div>
+</div>
