--- a/FrontEnd/src/app/pages/articles/articles.component.scss
+++ b/FrontEnd/src/app/pages/articles/articles.component.scss
@@ -4,16 +4,23 @@
   margin-top: 20px;
   margin-left: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  width: auto;
-  height: 100%;
+  width: 330px;
+  height: 550px;
 }
 .picture{
   width: 330px;
   height: 300px;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
 }
-.content{
-  margin: 3%;
+
+.cut-text {
+  text-align: justify;
+  text-justify: inter-word;
+  margin: 10px;
+  overflow: hidden;
+  // width: 160px;
+  height: 170px;
+}
+
+.tab{
+  margin-left: 10px;
 }
