--- a/FrontEnd/src/app/pages/home/home.component.html
+++ b/FrontEnd/src/app/pages/home/home.component.html
@@ -4,9 +4,9 @@
   <p class="p-top">Learn new skills and discover the power of LearningIT with step-by-step guidance. Start your journey today by exploring our modules.</p>
 </div>
 
-<div>
-  <div class="left">
-    <div class="linie">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-3">
       <h5>Category</h5>
       <ul class="filtre-category">
         <li *ngFor="let item of category">
@@ -14,9 +14,6 @@
           <label class="label-text-size">{{item.t}}</label>
         </li>
       </ul>
-    </div>
-    <br>
-    <div class="linie">
       <h5>Levels</h5>
       <ul class="filtre-level">
         <li *ngFor="let item of levels">
@@ -25,30 +22,31 @@
         </li>
       </ul>
     </div>
-    <br>
-  </div>
-  <div class="right">
-    <div class="container mt-5">
-    <div class="form-group">
-      <input type="text" class="form-control" placeholder="Search..." [(ngModel)]="filterTerm">
-    </div>
-    <div class="list-courses" *ngFor="let item of courses | filter:filterTerm">
-      <div class="icon">
-        <img class="center" width="50" height="50" src={{item.imageURL}} alt="poza">
+    <div class="col-9">
+      <div class="form-group"><br>
+        <input type="text" class="form-control" placeholder="Search..." [(ngModel)]="filterTerm">
       </div>
-      <div class="partea-albastra">
-        <br>
-        <br>
-        <br>
-      </div>
-      <div class="partea-alba">
-        <p class="MODULE">MODULE</p>
-        <p class="p-partea-alba"><a routerLink="/course" (click)="onclick(this.item.title)">{{item.title}}</a></p>
-        <p class="minute">38 min</p>
-        <div>
-          <p class="tag"><mark>Microsoft Endpoint Manager</mark> &nbsp; <mark>Intermediate</mark></p>
+      <div class="list-courses" *ngFor="let item of courses | filter:filterTerm | paginate:{itemsPerPage: 9, currentPage: p }">
+        <div class="icon">
+          <img class="center" width="50" height="50" src={{item.imageURL}} alt="poza">
         </div>
-        <div class="linie-parte-alba"></div>
+        <div class="partea-albastra">
+        </div>
+        <div class="partea-alba">
+          <p class="MODULE">MODULE</p>
+          <p class="p-partea-alba"><a routerLink="/course" (click)="onclick(this.item.title)">{{item.title}}</a></p>
+          <p class="minute">38 min</p>
+          <div>
+            <p class="tag"><mark>Microsoft Endpoint Manager</mark> &nbsp; <mark>Intermediate</mark></p>
+          </div>
+          <div class="linie-parte-alba"></div>
+        </div>
+      </div>
+    </div>
+    <div class="d-flex align-items-center justify-content-center" style="width: 100%;">
+      <div class="mx-auto p-4 bd-highlight col-example">
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
       </div>
     </div>
   </div>
+</div>
