--- a/FrontEnd/src/app/pages/login/login.component.scss
+++ b/FrontEnd/src/app/pages/login/login.component.scss
@@ -5,7 +5,8 @@
   color: black;
   background-color: white;
   border-radius: 15px;
-  margin-top: 2%;
+  margin-top: 10%;
+  margin-bottom: 9.99%;
 }
 
 .center {
