--- a/FrontEnd/src/app/pages/register/register.component.scss
+++ b/FrontEnd/src/app/pages/register/register.component.scss
@@ -5,7 +5,8 @@
   color: black;
   background-color: white;
   border-radius: 15px;
-  margin-top: 2%;
+  margin-top: 3%;
+  margin-bottom: 1.59%;
 }
 
 .center {
