--- a/FrontEnd/src/app/pages/team/team.component.html
+++ b/FrontEnd/src/app/pages/team/team.component.html
@@ -1,4 +1,16 @@
 <p>
     About us!
   </p>
-  
+  <input type="file" name="file" id="file" (change)="onFileChanged($event)" />
+
+ 
+  <div>
+    <button type="submit" class="btn btn-primary" (click)="onSubmit()">Salveaza poza<i class="fas fa-sign-in-alt"></i></button>
+  </div>
+
+  <div>
+    <img [src]="myimage2" width="200px" height="200px" alt="">
+  </div>
+  <div>
+    <button type="submit" class="btn btn-primary" (click)="displayPhoto()">Arata poza<i class="fas fa-sign-in-alt"></i></button>
+  </div>
