--- a/FrontEnd/src/app/elements/navbar/navbar.component.scss
+++ b/FrontEnd/src/app/elements/navbar/navbar.component.scss
@@ -4,11 +4,11 @@ body {
 }
 .navbar {
 	color: #fff;
-	background: #926dde !important;
+	background: #0078d4 !important;
 	padding: 5px 16px;
 	border-radius: 0;
 	border: none;
-	box-shadow: 0 0 4px rgba(0,0,0,.1);
+	box-shadow: 0 0 4px rgba(40, 3, 100, 0.1);
 }
 .navbar img {
 	border-radius: 50%;
