--- a/FrontEnd/src/app/pages/course/course.component.scss
+++ b/FrontEnd/src/app/pages/course/course.component.scss
@@ -7,7 +7,7 @@
   width: 23%;
   height: auto;
   color: black;
-  background-color: white;
+  background-color: #0078d4;
   border-radius: 15px;
   margin-top: 30px;
   margin-right: 30px;
