--- a/FrontEnd/src/app/pages/leaderboard/leaderboard.component.scss
+++ b/FrontEnd/src/app/pages/leaderboard/leaderboard.component.scss
@@ -2,8 +2,8 @@ body {
     min-height: 450px;
     height: 93.2vh;
     margin: 0;
-    background: -webkit-radial-gradient(ellipse farthest-corner at center top, #f39264 0%, #f2606f 100%);
-    background: radial-gradient(ellipse farthest-corner at center top, #f39264 0%, #f2606f 100%);
+    background: -webkit-radial-gradient(ellipse farthest-corner at center top, #ffffff 0%, #ffffff 100%);
+    background: radial-gradient(ellipse farthest-corner at center top, #ffffff 0%, #ffffff 100%);
     color: #fff;
     font-family: 'Open Sans', sans-serif;
   }
