--- a/FrontEnd/src/app/elements/navbar/navbar.component.html
+++ b/FrontEnd/src/app/elements/navbar/navbar.component.html
@@ -39,7 +39,8 @@
 			<div class="nav-item dropdown">
 				<a data-toggle="dropdown" class="nav-item nav-link dropdown-toggle user-action">
           <img src="https://i.ibb.co/QrrWFH8/user.png" class="avatar" alt="Avatar">
-           {{FirstName}} {{LastName}}<b class="caret"></b></a>
+           {{FirstName}} {{LastName}}
+           {{Score}}<b class="caret"></b></a>
 				<div class="dropdown-menu">
 					<a href="#" class="dropdown-item"><i class="fa fa-user-o"></i> Profile</a>
 					<a href="#" class="dropdown-item"><i class="fa fa-graduation-cap"></i> My Certificates</a>
