--- a/FrontEnd/src/app/pages/team/team.component.html
+++ b/FrontEnd/src/app/pages/team/team.component.html
@@ -1,16 +1,85 @@
-<p>
-    About us!
-  </p>
-  <input type="file" name="file" id="file" (change)="onFileChanged($event)" />
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Team Section</title>
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
 
- 
-  <div>
-    <button type="submit" class="btn btn-primary" (click)="onSubmit()">Salveaza poza<i class="fas fa-sign-in-alt"></i></button>
-  </div>
+  <section class="team-section">
+     <div class="container">
+         <div class="row">
+             <div class="section-title">
+                 <h1>Always ready to help you!</h1>
+                 <p>Contact us at: learningit@gmail.com</p>
+             </div>
+         </div>
+         <div class="row">
+             <div class="team-items">
+                  <div class="item">
+                      <img src="https://media.discordapp.net/attachments/802906524157870111/802913383279886336/133246115_3594335214014125_7697250588850868698_o.jpg?width=659&height=663" alt="team" />
+                      <div class="inner">
+                          <div class="info">
+                               <h5>Gabriel Stancu</h5>
+                               <p>Programator</p>
+                               <div class="social-links">
+                                   <a href="https://www.facebook.com/bitu.stancu"><span class="fa fa-facebook"></span></a>
 
-  <div>
-    <img [src]="myimage2" width="200px" height="200px" alt="">
-  </div>
-  <div>
-    <button type="submit" class="btn btn-primary" (click)="displayPhoto()">Arata poza<i class="fas fa-sign-in-alt"></i></button>
-  </div>
+                                   <a href="https://www.linkedin.com/in/gabriel-stancu/"><span class="fa fa-linkedin"></span></a>
+
+                               </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <img src="https://scontent.ftce2-1.fna.fbcdn.net/v/t1.0-9/135831721_3538471569577713_4597072262359663718_o.jpg?_nc_cat=100&ccb=2&_nc_sid=09cbfe&_nc_ohc=YtNj4FZ64fYAX8Yd7zW&_nc_ht=scontent.ftce2-1.fna&oh=6d7ff77837d230d14db6df2d920605c0&oe=60330D36" alt="team" />
+                      <div class="inner">
+                          <div class="info">
+                               <h5>Adriana Costache</h5>
+                               <p>Programator</p>
+                               <div class="social-links">
+                                   <a href="https://www.facebook.com/adriana.valentina3"><span class="fa fa-facebook"></span></a>
+
+                                   <a href="https://www.linkedin.com/feed/"><span class="fa fa-linkedin"></span></a>
+
+                               </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <img src="https://media.discordapp.net/attachments/802906524157870111/802916876807438377/unknown.png?width=663&height=663" alt="team" />
+                      <div class="inner">
+                          <div class="info">
+                               <h5>Roberto Simion</h5>
+                               <p>Programator</p>
+                               <div class="social-links">
+                                   <a href="https://www.facebook.com/roberto.simion.98"><span class="fa fa-facebook"></span></a>
+
+                                   <a href="https://www.linkedin.com/in/roberto-florian-simion-70343517b/"><span class="fa fa-linkedin"></span></a>
+
+                               </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <img src="https://media.discordapp.net/attachments/802906524157870111/802918485562097746/unknown.png?width=678&height=662" alt="team" />
+                      <div class="inner">
+                          <div class="info">
+                               <h5>Costin Fratila</h5>
+                               <p>Programator</p>
+                               <div class="social-links">
+                                   <a href="https://www.facebook.com/costin.fratila"><span class="fa fa-facebook"></span></a>
+
+                                   <a href="https://www.linkedin.com/in/costin-fratila-225667152/"><span class="fa fa-linkedin"></span></a>
+
+                               </div>
+                          </div>
+                      </div>
+                  </div>
+             </div>
+         </div>
+     </div>
+  </section>
+
+</body>
+</html>
