--- a/FrontEnd/src/app/pages/login/login.component.html
+++ b/FrontEnd/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<!-- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
 <div class="basic">
@@ -18,4 +18,32 @@
       <button class="btn btn-outline-danger" routerLink="article">Forgot Password?</button>
     </form>
   </div>
+</div> -->
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
+
+<div class="container" id="container">
+	<div class="form-container sign-in-container">
+		<form #f="ngForm">
+			<h1>Sign in</h1>
+			<input type="email" name="Email" ngModel required #Email="ngModel" class="form-control" id="Email" placeholder="Enter email">
+			<input type="password" name="Password" ngModel required #Password="ngModel" class="form-control" id="Password" placeholder="Password">
+			<button type="submit" [disabled]="f.invalid" (click)="Login(f)">Sign In</button>
+		</form>
+	</div>
+	<div class="overlay-container">
+		<div class="overlay">
+			<div class="overlay-panel overlay-left">
+				<h1>Welcome Back!</h1>
+				<p>To keep connected with us please login with your personal info</p>
+				<button class="ghost" id="signIn">Sign In</button>
+			</div>
+			<div class="overlay-panel overlay-right">
+				<h1>Hello to LearningIT!</h1>
+				<p>Enter your personal details and start journey with us</p>
+				<a routerLink="/register"><button class="ghost" id="signUp">Sign Up</button> </a>
+			</div>
+		</div>
+	</div>
 </div>
