--- a/FrontEnd/src/app/pages/course/course.component.scss
+++ b/FrontEnd/src/app/pages/course/course.component.scss
@@ -1,43 +1,46 @@
-
-
-
 .rectangle {
-  height: 100% ;
-  width: 910px;
-  background: #f4f7f7;
-  border: 0.2px solid rgb(224, 224, 224);
+  float: left;
   border-radius: 7px;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  margin-top:50px;
-  box-shadow: 1px 1px 1.5px 1px #e2e2e2;
+  margin-top: 20px;
+  margin-left: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 900px;
+  height: 100%;
 }
 
 .icon {
-  height: 85px;
-  width: 85px;
-  margin-top: 30px;
-  margin-left: 50px;
+  height: 100px;
+  width: 100px;
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 30px;
 }
 
 .circle-icon {
+  background-color: #5493cf;
   border-radius: 50%;
-  background: #55A2FF;
-  border:4px solid #0078D4;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  z-index: 1;
+  margin-top: 25px;
+  margin-left: 35px;
+  border-top: 4px solid #27c0f5;
+  border-bottom: 4px solid #27c0f5;
+  border-right: 4px solid #27c0f5;
+  border-left: 4px solid #27c0f5;
 }
 
 .center {
-  margin-left: auto;
-  margin-right: auto;
   display: block;
+  float: left;
+  margin: 12px;
 }
-
 
 .title {
   margin-left: 35px;
-  margin-top: 40px;
-  font-size: 25px;
+  margin-top: 55px;
+  font-size: 35px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -47,21 +50,38 @@
   font-size: 11px;
 }
 
-#parallelogram {
-  margin-top: 17px;
-  margin-left: 565px;
-	width: 75px;
-	height: 20px;
-  background: #E3E3E3;
-  border: 0.3px solid rgb(224, 221, 221);
-  box-shadow: 1px 1px 1.5px 1px #bebebe;
-}
-
 .experience {
   transform: skew(0deg);
   text-align: center;
   text-decoration: none;
+  font-size: 14px;
+  color: black;
 }
+
+.test1{
+  float: left;
+  border-right: 11px solid #d8d8d8;
+  border-top: 11px solid transparent;
+  border-bottom: 11px solid transparent;
+}
+.test2{
+  float: left;
+  width: 80px;
+  height: 22px;
+  background-color: #d8d8d8;
+}
+.test3{
+  float: left;
+  border-left: 11px solid #d8d8d8;
+  border-top: 11px solid transparent;
+  border-bottom: 11px solid transparent;
+}
+
+.hexagon{
+  margin-top: 20px;
+  margin-left: 500px;
+}
+
 .tags {
 margin-left: 125px;
 }
