--- a/FrontEnd/src/app/pages/register/register.component.html
+++ b/FrontEnd/src/app/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="basic">
+<!-- <div class="basic">
 	<div class="col-md-6 offset-md-3 mt-4">
 		<h3>Sign up</h3>
 		<form #f="ngForm">
@@ -26,4 +26,19 @@
       <button class="btn btn-outline-success" routerLink="/login">Login</button>
 		</form>
 	</div>
-</div>
+</div> -->
+
+<div class="container" id="container">
+  <div class="form-container sign-up-container">
+    <form action="#">
+      <h1>Create Account</h1>
+      <input type="text" name="FirstName" [(ngModel)]="model.FirstName" required #FirstName="ngModel" class="form-control" id="FirstName" placeholder="First Name">
+      <input type="text" name="LastName" [(ngModel)]="model.LastName" required #LastName="ngModel" class="form-control" id="LastName" placeholder="Last Name">
+      <input type="email" name="Email" [(ngModel)]="model.Email" required #Email="ngModel" class="form-control" id="Email" placeholder="Enter email">
+      <input type="password" name="Password" [(ngModel)]="model.Password" required #Password="ngModel" class="form-control" id="Password" placeholder="Password">
+      <input type="password" name="ConfirmPassword" [(ngModel)]="model.ConfirmPassword" required #ConfirmPassword="ngModel" class="form-control" id="ConfirmPassword" placeholder="Confirm Password">
+      <button type="submit" class="btn btn-primary" (click)="onSubmit()">Sign up<i class="fas fa-sign-in-alt"></i></button>
+    </form>
+
+  </div>
+  </div>
