--- a/FrontEnd/src/app/pages/team/team.component.html
+++ b/FrontEnd/src/app/pages/team/team.component.html
@@ -17,7 +17,7 @@
          <div class="row">
              <div class="team-items">
                   <div class="item">
-                      <img src="https://media.discordapp.net/attachments/802906524157870111/802913383279886336/133246115_3594335214014125_7697250588850868698_o.jpg?width=659&height=663" alt="team" />
+                      <img src="https://i.ibb.co/3CJ3dBT/b.jpg" alt="team" />
                       <div class="inner">
                           <div class="info">
                                <h5>Gabriel Stancu</h5>
@@ -32,7 +32,7 @@
                       </div>
                   </div>
                   <div class="item">
-                      <img src="https://scontent.ftce2-1.fna.fbcdn.net/v/t1.0-9/135831721_3538471569577713_4597072262359663718_o.jpg?_nc_cat=100&ccb=2&_nc_sid=09cbfe&_nc_ohc=YtNj4FZ64fYAX8Yd7zW&_nc_ht=scontent.ftce2-1.fna&oh=6d7ff77837d230d14db6df2d920605c0&oe=60330D36" alt="team" />
+                      <img src="https://i.ibb.co/YLWtYBp/a.jpg" alt="team" />
                       <div class="inner">
                           <div class="info">
                                <h5>Adriana Costache</h5>
@@ -47,7 +47,7 @@
                       </div>
                   </div>
                   <div class="item">
-                      <img src="https://media.discordapp.net/attachments/802906524157870111/802916876807438377/unknown.png?width=663&height=663" alt="team" />
+                      <img src="https://i.ibb.co/BjJgpq5/r.jpg" alt="team" />
                       <div class="inner">
                           <div class="info">
                                <h5>Roberto Simion</h5>
@@ -61,7 +61,7 @@
                       </div>
                   </div>
                   <div class="item">
-                      <img src="https://media.discordapp.net/attachments/802906524157870111/802918485562097746/unknown.png?width=678&height=662" alt="team" />
+                      <img src="https://i.ibb.co/nPkVnq7/c.png" alt="team" />
                       <div class="inner">
                           <div class="info">
                                <h5>Costin Fratila</h5>
