--- a/FrontEnd/src/app/pages/team/team.component.css
+++ b/FrontEnd/src/app/pages/team/team.component.css
@@ -9,7 +9,7 @@ body{
 }
 
 .team-section{
-	/* background-color:#3b83b3; */
+	background-color: #f2f2f2;
 	min-height: 100vh;
   padding:70px 15px 30px;
 
