am facut merge cu adriana si este bine

--- a/FrontEnd/src/app/pages/myprofile/myprofile.component.html
+++ b/FrontEnd/src/app/pages/myprofile/myprofile.component.html
@@ -18,7 +18,7 @@
           </div>
           <div class="col-6 pt-1">
             <div class="progress" style="background-color: #e3e3e3">
-              <div class="progress-bar" role="progressbar" [ngStyle]="{'width': procent+'%', 'aria-valuenow':procent, 'aria-valuemin':'0', 'aria-valuemax':'100', 'background-color': 'green'}">{{procent}}</div>
+              <div class="progress-bar" role="progressbar" [ngStyle]="{'width': procent+'%', 'aria-valuenow':procent, 'aria-valuemin':'0', 'aria-valuemax':'100', 'background-color': 'green'}">{{procent}} %</div>
             </div>
           </div>
         </div>
