--- a/FrontEnd/src/app/pages/register/register.component.scss
+++ b/FrontEnd/src/app/pages/register/register.component.scss
@@ -66,8 +66,8 @@ a {
 
 button {
 	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
+	border: 1px solid #5493cf;
+	background-color: #5493cf;
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
