--- a/FrontEnd/src/app/elements/navbar/navbar.component.html
+++ b/FrontEnd/src/app/elements/navbar/navbar.component.html
@@ -38,7 +38,7 @@
 			<a routerLink="/team" class="nav-item nav-link active" ><i class="fa fa-globe"></i><span>Team</span></a>
 			<div class="nav-item dropdown">
 				<a data-toggle="dropdown" class="nav-item nav-link dropdown user-action">
-          <img src="https://i.ibb.co/QrrWFH8/user.png" class="avatar" alt="Avatar">
+          <img src="{{img}}" class="avatar" alt="Avatar">
           </a>
 				<div class="dropdown-menu">
 					<a routerLink="/my-profile" class="dropdown-item"><i class="fa fa-user-o"></i> Profile</a>
