--- a/FrontEnd/src/app/pages/login/login.component.scss
+++ b/FrontEnd/src/app/pages/login/login.component.scss
@@ -67,8 +67,8 @@ a {
 
 button {
 	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
+	border: 1px solid #5493cf;
+	background-color: #5493cf;
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
@@ -183,9 +183,9 @@ input {
 }
 
 .overlay {
-	background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background: #0078d4;
+	background: -webkit-linear-gradient(to right, #5493cf, #0078d4);
+	background: linear-gradient(to right, #5493cf, #0078d4);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
