--- a/FrontEnd/src/app/pages/home/home.component.html
+++ b/FrontEnd/src/app/pages/home/home.component.html
@@ -45,7 +45,7 @@
     </div>
     <div class="d-flex align-items-center justify-content-center" style="width: 100%;">
       <div class="mx-auto p-4 bd-highlight col-example">
-        <pagination-controls (pageChange)="p = $event"></pagination-controls>
+        <pagination-controls (pageChange)="p = $event" (click)="sus()"></pagination-controls>
       </div>
     </div>
   </div>
