--- a/FrontEnd/src/app/pages/welcome/welcome.component.html
+++ b/FrontEnd/src/app/pages/welcome/welcome.component.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>LearningIt</title>
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600" rel="stylesheet">
-	<script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
-  <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
   <script src="main.js"></script>
+  <script src="/FrontEnd//node_modules//animejs/lib/anime.min.js"></script>
+  <script src="/FrontEnd/node_modules/scrollreveal/dist/scrollreveal.min.js"></script>
 </head>
 <body class="is-boxed has-animations">
   <div class="body-wrap">
