--- a/FrontEnd/src/app/pages/team/team.component.html
+++ b/FrontEnd/src/app/pages/team/team.component.html
@@ -40,4 +40,5 @@
   </div>
 </div>
 
+<button type="button" class="btn btn-primary" (click)="certificat()" data-dismiss="modal">Certificat</button>
 
