--- a/FrontEnd/src/app/pages/myprofile/myprofile.component.html
+++ b/FrontEnd/src/app/pages/myprofile/myprofile.component.html
@@ -87,7 +87,7 @@
                 <img class="center" width="50" height="50" src="{{badge.imageURL}}" alt="poza">
               </div>
               <p class="BADGE">BADGE</p>
-              <p class="p-partea-alba">{{badge.title}}</p>
+              <p (click)="certificat(badge.id)" class="p-partea-alba">{{badge.title}}</p>
               <p class="minute">16.01.2021</p>
             </div>
           </div>
