--- a/FrontEnd/src/app/pages/login/login.component.scss
+++ b/FrontEnd/src/app/pages/login/login.component.scss
@@ -27,13 +27,14 @@
 }
 
 body {
+  padding-top: 50%;
+  padding-bottom: 50%;
 	background: #f6f5f7;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
-	height: 100vh;
 	margin: -20px 0 50px;
 }
 
@@ -111,13 +112,14 @@ input {
 }
 
 .container {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 	background-color: #fff;
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25),
 			0 10px 10px rgba(0,0,0,0.22);
-	position: relative;
 	overflow: hidden;
 	width: 768px;
 	max-width: 100%;
