--- a/FrontEnd/src/app/pages/register/register.component.scss
+++ b/FrontEnd/src/app/pages/register/register.component.scss
@@ -115,12 +115,13 @@ input {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 	background-color: #fff;
 	border-radius: 10px;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25),0 10px 10px rgba(0,0,0,0.22);
-	position: relative;
 	overflow: hidden;
 	width: 768px;
 	max-width: 100%;
