--- a/FrontEnd/src/app/pages/welcome/welcome.component.html
+++ b/FrontEnd/src/app/pages/welcome/welcome.component.html
@@ -13,57 +13,53 @@
 <body class="is-boxed has-animations">
   <div class="body-wrap">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-5">
-          <header class="site-header">
-            <div class="container">
+      <div class="d-flex justify-content-center">
+        <div class="container">
+          <header style="padding-left: 28%; padding-top: 200px;">
+            <div class="container" >
               <div class="site-header-inner">
-                <div class="brand header-brand">
+                <div class="">
                   <h1 class="m-0">
                     <img class="header-logo-image" src="https://i.ibb.co/PxP2DHZ/logo.png" alt="Logo">
                   </h1>
+                  <div class="hero-inner">
+                    <div class="hero-copy pt-5">
+                      <h1 class="hero-title mt-0"> Welcome to LearningIt!</h1>
+                      <p class="hero-paragraph">Learn new skills and discover the power of LearningIT with step-by-step guidance. Start your journey today by exploring our modules.</p>
+                      <div class="hero-cta"><a class="button button-primary" routerLink="/login">Start learning</a></div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </header>
-          <section class="hero">
-            <div class="container">
-              <div class="hero-inner">
-                <div class="hero-copy">
-                  <h1 class="hero-title mt-0"> Welcome to LearningIt!</h1>
-                  <p class="hero-paragraph">Learn new skills and discover the power of LearningIT with step-by-step guidance. Start your journey today by exploring our modules.</p>
-                  <div class="hero-cta"><a class="button button-primary" routerLink="/login">Start learning</a></div>
-                </div>
-                <div class="hero-figure anime-element">
-                  <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
-                    <rect width="528" height="396" style="fill:transparent;" />
-                  </svg>
-                  <div class="hero-figure-box hero-figure-box-01" data-rotation="45deg"></div>
-                  <div class="hero-figure-box hero-figure-box-02" data-rotation="-45deg"></div>
-                  <div class="hero-figure-box hero-figure-box-03" data-rotation="0deg"></div>
-                  <div class="hero-figure-box hero-figure-box-04" data-rotation="-135deg"></div>
-                  <div class="hero-figure-box hero-figure-box-05"></div>
-                  <div class="hero-figure-box hero-figure-box-06"></div>
-                  <div class="hero-figure-box hero-figure-box-07"></div>
-                  <div class="hero-figure-box hero-figure-box-08" data-rotation="-22deg"></div>
-                  <div class="hero-figure-box hero-figure-box-09" data-rotation="-52deg"></div>
-                  <div class="hero-figure-box hero-figure-box-10" data-rotation="-50deg"></div>
-                </div>
-              </div>
-            </div>
-          </section>
         </div>
-        <div class="col-xl-7">
+        <div class="col-7">
           <div class="d-flex flex-row-reverse">
             <img src="https://i.ibb.co/gTF1q0Z/cub.png" alt="">
           </div>
         </div>
+        <section class="hero">
+          <div class="container">
+            <div class="hero-inner">
+              <div class="hero-figure anime-element">
+                <div class="hero-figure-box hero-figure-box-01" data-rotation="45deg"></div>
+                <div class="hero-figure-box hero-figure-box-02" data-rotation="-45deg"></div>
+                <div class="hero-figure-box hero-figure-box-03" data-rotation="0deg"></div>
+                <div class="hero-figure-box hero-figure-box-04" data-rotation="-135deg"></div>
+                <div class="hero-figure-box hero-figure-box-05"></div>
+                <div class="hero-figure-box hero-figure-box-06"></div>
+                <div class="hero-figure-box hero-figure-box-07"></div>
+                <div class="hero-figure-box hero-figure-box-08" data-rotation="-22deg"></div>
+                <div class="hero-figure-box hero-figure-box-09" data-rotation="-52deg"></div>
+                <div class="hero-figure-box hero-figure-box-10" data-rotation="-50deg"></div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </div>
-
-
     <main>
-
       <section class="features section">
         <div class="container">
 					<div class="features-inner section-inner has-bottom-divider">
